src/objects/JiraIssues__c.object
<CustomObject>
    <fields>
        <fullName>issuetype__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Issuetype</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>summary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <label>JiraIssues</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>issuetype__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JI-{0000}</displayFormat>
        <label>JiraIssues Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JiraIssues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>